# kels

./: .gardenignore  .gitignore  .terminology-forbidden  AGENTS.md  CLAUDE.md  CLIENT_DIVERGENCE_DETECTION.md  Cargo.toml  Makefile  README.md  garden.yml  project.garden.yml
.vscode.example/: settings.json
clients/cli/: Cargo.toml  deny.toml
clients/cli/src/: helpers.rs  main.rs
clients/cli/src/commands/: cred.rs  dev.rs  exchange.rs  kel.rs  mail.rs  mod.rs  sad.rs  sel.rs
clients/kels-bench/: Cargo.toml  deny.toml
clients/kels-bench/src/: main.rs
clients/kels-cli/: Cargo.toml  deny.toml
clients/kels-cli/src/: main.rs
docs/: attack-surface.md  deployment.md  divergence-detection.md  endpoints.md  federation-state-machine.md  federation.md  gossip.md  kel-merge.md  kel-verification.md  kels-attack-surface.md  keri-comparison.md  node-attack-surface.md  operations.md  protocol-attack-surface.md  registry-attack-surface.md  registry-removal.md  registry.md  (+4 more)
lib/creds/: Cargo.toml  deny.toml
lib/creds/src/: compaction.rs  credential.rs  disclosure.rs  edge.rs  error.rs  json_api.rs  lib.rs  rule.rs  schema.rs  store.rs  verification.rs
lib/derive/: Cargo.toml  deny.toml
lib/derive/src/: lib.rs
lib/exchange/: Cargo.toml
lib/exchange/src/: client.rs  error.rs  essr.rs  key_publication.rs  lib.rs  mail.rs  message.rs
lib/ffi/: Cargo.toml  build.rs  deny.toml
lib/ffi/src/: credential.rs  dev.rs  exchange.rs  kel.rs  lib.rs  registry.rs  sad.rs
lib/gossip/: Cargo.toml
lib/gossip/src/: addr.rs  identity.rs  lib.rs
lib/gossip/src/net/: actor.rs  codec.rs  crypto.rs  mod.rs  transport.rs
lib/gossip/src/proto/: hyparview.rs  mod.rs  plumtree.rs  state.rs  topic.rs  util.rs
lib/kels/: Cargo.toml  deny.toml
lib/kels-creds/: Cargo.toml
lib/kels-creds/src/: compaction.rs  credential.rs  disclosure.rs  edge.rs  error.rs  json_api.rs  lib.rs  revocation.rs  rule.rs  schema.rs  store.rs  verification.rs
lib/kels-ffi/: Cargo.toml  build.rs  cbindgen.toml  deny.toml
lib/kels-ffi/include/: libkels.h
lib/kels-ffi/src/: lib.rs
lib/kels/src/: builder.rs  cache.rs  client.rs  crypto.rs  disclosure.rs  error.rs  file_store.rs  identity_builder.rs  kel.rs  lib.rs  merge.rs  p2p_signature.rs  recovery.rs  registry_client.rs  repository.rs  repository_store.rs  sad.rs  sad_builder.rs  server.rs  serving.rs  store.rs  types.rs
lib/kels/src/client/: identity.rs  kels.rs  mod.rs  registry.rs  sadstore.rs
lib/kels/src/crypto/: aead.rs  keys.rs  mod.rs
lib/kels/src/hardware/: mod.rs  provider.rs  secure_enclave.rs
lib/kels/src/store/: file.rs  iel.rs  mod.rs  repository.rs  sad.rs
lib/kels/src/types/: auth.rs  error.rs  events.rs  federation.rs  kel.rs  merge_context.rs  mod.rs  node.rs  peer.rs  policy_checker.rs  raft.rs  recovery.rs  sad_pointer.rs  sad_record.rs  sad_transfer.rs  sync.rs  verification.rs  verifier.rs
lib/kels/src/types/federation/: member.rs  mod.rs  raft.rs  voting.rs
lib/kels/src/types/gossip/: peer.rs
lib/kels/src/types/iel/: event.rs  mod.rs  request.rs  sync.rs  verification.rs
lib/kels/src/types/kel/: event.rs  mod.rs  recovery.rs  request.rs  sync.rs  verification.rs
lib/kels/src/types/sad/: custody.rs  event.rs  mod.rs  object.rs  pointer.rs  repair.rs  request.rs  sync.rs  verification.rs
lib/mock-hsm/: Cargo.toml  deny.toml
lib/mock-hsm/src/: lib.rs
lib/policy/: Cargo.toml
lib/policy/src/: ast.rs  error.rs  evaluator.rs  identity_chain.rs  json_api.rs  lib.rs  parser.rs  policy.rs  policy_checker.rs  resolver.rs  verification.rs
services/hsm/: Cargo.toml  Dockerfile  deny.toml  garden.yml  manifests.yml.tpl
services/hsm/src/: handlers.rs  lib.rs  main.rs  pkcs11.rs  server.rs
services/identity/: Cargo.toml  Dockerfile  deny.toml  garden.yml  manifests.yml.tpl
services/identity/migrations/: 0001_initial.sql
services/identity/src/: handlers.rs  hsm.rs  lib.rs  main.rs  repository.rs  server.rs
services/kels/: Cargo.toml  Dockerfile  deny.toml  garden.yml  manifests-standalone.yml.tpl  manifests.yml.tpl
services/kels-gossip/: Cargo.toml  Cargo.workspace.toml  Dockerfile  deny.toml  garden.yml  manifests.yml.tpl
services/kels-gossip/migrations/: 0001_initial.sql
services/kels-gossip/src/: allowlist.rs  bootstrap.rs  gossip.rs  gossip_layer.rs  hsm_signer.rs  http.rs  lib.rs  main.rs  peer_store.rs  protocol.rs  registry_client.rs  repository.rs  server.rs  sync.rs
services/kels-registry/: Cargo.toml  Dockerfile  deny.toml  garden.yml  manifests.yml.tpl
services/kels-registry/migrations/: 0001_initial.sql
services/kels-registry/src/: handlers.rs  identity_client.rs  lib.rs  main.rs  peer.rs  peer_handlers.rs  peer_store.rs  raft_store.rs  registry_kel_handlers.rs  repository.rs  server.rs  signature.rs  store.rs
services/kels-registry/src/federation/: config.rs  mod.rs  network.rs  state_machine.rs  storage.rs  sync.rs  types.rs
services/kels-sadstore/: Cargo.toml  Dockerfile  deny.toml  garden.yml  manifests.yml.tpl
services/kels-sadstore/migrations/: 0001_initial.sql
services/kels-sadstore/src/: handlers.rs  lib.rs  main.rs  object_store.rs  repository.rs  server.rs
services/kels-sadstore/tests/: integration_tests.rs  repair_tests.rs
services/kels/migrations/: 0001_initial.sql
services/kels/src/: handlers.rs  lib.rs  main.rs  repository.rs  server.rs
services/kels/tests/: handler_tests.rs  integration_tests.rs
services/mail/: Cargo.toml  Dockerfile  deny.toml  garden.yml  manifests-node.yml.tpl  manifests-standalone.yml.tpl  manifests.yml.tpl
services/mail/migrations/: 0001_initial.sql
services/mail/src/: blob_store.rs  handlers.rs  lib.rs  main.rs  repository.rs  server.rs
services/sadstore/: Cargo.toml  Dockerfile  deny.toml  garden.yml  manifests.yml.tpl
services/sadstore/migrations/: 0001_initial.sql  0002_iel_events.sql
services/sadstore/src/: compaction.rs  expansion.rs  handlers.rs  lib.rs  object_store.rs  repository.rs  server.rs
services/sadstore/tests/: identity_builder_tests.rs  integration_tests.rs  repair_tests.rs  sad_builder_tests.rs
(+333 files in other folders)
