[workspace]
resolver = "2"

members = [
    "lib/gossip",
    "lib/kels",
    "lib/kels-derive",
    "lib/kels-creds",
    "lib/kels-ffi",
    "lib/kels-mock-hsm",
    "services/kels",
    "services/kels-gossip",
    "services/kels-registry",
    "services/identity",
    "clients/kels-bench",
    "clients/kels-cli",
]

# Workspace-wide clippy lints - deny panicky code patterns
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unwrap_in_result = "deny"

