[workspace]
resolver = "2"

members = [
    "lib/gossip",
    "lib/kels",
    "lib/derive",
    "lib/creds",
    "lib/policy",
    "lib/exchange",
    "lib/ffi",
    "lib/mock-hsm",
    "services/kels",
    "services/gossip",
    "services/registry",
    "services/sadstore",
    "services/mail",
    "services/identity",
    "clients/bench",
    "clients/cli",
]

# Workspace-wide clippy lints - deny panicky code patterns
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unwrap_in_result = "deny"

