[package]
name = "kels-cli"
version = "0.1.0"
edition = "2024"
authors = ["Jason Colburne"]
license = "MIT"
description = "KELS Command Line Interface"

[[bin]]
name = "kels-cli"
path = "src/main.rs"

[features]
default = []
dev-tools = ["kels-core/dev-tools"]

[dependencies]
kels-core = { path = "../../lib/kels", features = ["native", "federation"] }
kels-exchange = { path = "../../lib/exchange" }
kels-creds = { path = "../../lib/creds" }
kels-policy = { path = "../../lib/policy" }
cesr = { git = "https://github.com/jasoncolburne/cesr-rs" }
verifiable-storage = { git = "https://github.com/jasoncolburne/verifiable-storage-rs" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
colored = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
dirs = "6"
toml = "0.8"
rand = "0.8"

[dev-dependencies]
cesr = { git = "https://github.com/jasoncolburne/cesr-rs", features = ["test-utils"] }
