[package]
name = "kels-bench"
version = "0.1.0"
edition = "2021"
authors = ["Jason Colburne"]
license = "MIT"
description = "KELS Load Testing Tool"

[[bin]]
name = "kels-bench"
path = "src/main.rs"

[dependencies]
libkels = { path = "../../lib/kels", features = ["native", "dev-tools"] }
verifiable-storage = { git = "https://github.com/jasoncolburne/verifiable-storage-rs" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colored = "2"
hdrhistogram = "7"
