[package]
name = "kels-derive"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Jason Colburne"]
description = "Derive macros for kels-core - generates signed event repository methods"

[lib]
name = "kels_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
