[package]
name = "kels-ffi"
version = "0.1.0"
edition = "2024"
authors = ["Jason Colburne"]
license = "MIT"
description = "KELS FFI bindings for iOS/macOS"

[lib]
name = "kels_ffi"
crate-type = ["staticlib", "cdylib"]

[features]
default = ["native"]
native = ["kels_core/native"]
secure-enclave = ["kels_core/secure-enclave"]
dev-tools = ["kels_core/dev-tools"]
federation = ["kels_core/federation"]

[dependencies]
kels_core = { package = "kels-core", path = "../kels", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
verifiable-storage = { git = "https://github.com/jasoncolburne/verifiable-storage-rs" }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cbindgen = "0.29"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unwrap_in_result = "deny"
