[package]
name = "kels-policy"
version = "0.1.0"
edition = "2024"
authors = ["Jason Colburne"]
license = "MIT"
description = "KELS policy framework - composable trust policies for credential endorsement"

[lib]
name = "kels_policy"
path = "src/lib.rs"

[dependencies]
# Core KELS library for KEL verification
kels_core = { package = "kels-core", path = "../kels" }

# Verifiable storage traits and derive macros
verifiable-storage = { git = "https://github.com/jasoncolburne/verifiable-storage-rs" }

# Local CESR library for cryptographic operations
cesr = { git = "https://github.com/jasoncolburne/cesr-rs", default-features = false, features = ["native"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# Error handling
thiserror = "1"

# Async traits
async-trait = "0.1"

[dev-dependencies]
cesr = { git = "https://github.com/jasoncolburne/cesr-rs", features = ["test-utils"] }
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
tempfile = "3"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unwrap_in_result = "deny"
