[package]
name = "kels-sadstore"
version = "0.1.0"
edition = "2024"
authors = ["Jason Colburne"]
license = "MIT"
description = "KELS SADStore - Replicated Self-Addressed Data Store"

[[bin]]
name = "sadstore"
path = "src/main.rs"

[lib]
name = "kels_sadstore"
path = "src/lib.rs"

[dependencies]
# Local libraries
cesr = { git = "https://github.com/jasoncolburne/cesr-rs" }
verifiable-storage = { git = "https://github.com/jasoncolburne/verifiable-storage-rs" }
verifiable-storage-postgres = { git = "https://github.com/jasoncolburne/verifiable-storage-rs" }
kels-core = { path = "../../lib/kels", features = ["redis", "server"] }
kels-policy = { path = "../../lib/policy" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.7"

# Timestamps
chrono = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
async-trait = "0.1"

# Per-prefix rate limiting
dashmap = "6"

# S3-compatible object storage (MinIO)
aws-sdk-s3 = { version = "1", default-features = false, features = [                                                                                                                               
    "sigv4a",                                                                                                                                                                                            
    "http-1x",
    "default-https-client",   # modern rustls-aws-lc path                                                                                                                                                
    "rt-tokio",                                                                                                                                                                                          
] }
aws-config = { version = "1", features = ["behavior-version-latest"] }

# Redis for pub/sub announcements
redis = { version = "1.1", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
cesr = { git = "https://github.com/jasoncolburne/cesr-rs", features = ["test-utils"] }
chrono = "0.4"
tokio-test = "0.4"
testcontainers = "0.27"
ctor = "0.4"
testcontainers-modules = { version = "0.15", features = ["postgres", "redis"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serial_test = "3"
# Full-stack integration tests: sad_builder_tests drives both services.
# The package is named `kels` (services/kels/Cargo.toml); the library target
# it exports is `kels_service`, which is what `use` statements reference.
kels = { path = "../../services/kels" }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unwrap_in_result = "deny"
